bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q11 (Plain Term).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/explore-q11.sparql\")).await"
---
{
  "head": {
    "vars": [
      "property",
      "hasValue",
      "isValueOf"
    ]
  },
  "results": {
    "bindings": [
      {
        "hasValue": {
          "datatype": "http://www.w3.org/2001/XMLSchema#date",
          "type": "literal",
          "value": "2008-05-25"
        },
        "property": {
          "type": "uri",
          "value": "http://purl.org/dc/elements/1.1/date"
        }
      },
      {
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Vendor1"
        },
        "property": {
          "type": "uri",
          "value": "http://purl.org/dc/elements/1.1/publisher"
        }
      },
      {
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Offer"
        },
        "property": {
          "type": "uri",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type"
        }
      },
      {
        "hasValue": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "4"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays"
        }
      },
      {
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250/"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage"
        }
      },
      {
        "hasValue": {
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD",
          "type": "literal",
          "value": "7956.65"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price"
        }
      },
      {
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product463"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product"
        }
      },
      {
        "hasValue": {
          "datatype": "http://www.w3.org/2001/XMLSchema#dateTime",
          "type": "literal",
          "value": "2008-03-17T00:00:00"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validFrom"
        }
      },
      {
        "hasValue": {
          "datatype": "http://www.w3.org/2001/XMLSchema#dateTime",
          "type": "literal",
          "value": "2008-07-18T00:00:00"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo"
        }
      },
      {
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Vendor1"
        },
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor"
        }
      }
    ]
  }
}
