bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q12 (Object ID).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_graph_result_query(&store,\ninclude_str!(\"./queries/explore-q12.sparql\")).await"
---
<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/validuntil> "2008-06-06T00:00:00"^^<http://www.w3.org/2001/XMLSchema#dateTime> ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/deliveryDays> 5 ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/price> "1967.17"^^<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD> ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/offerURL> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035/> ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/vendorhomepage> <http://www.vendor5.com/> ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/vendor> "supremacist" ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/productlabel> "chisels bolsterer" ;
	<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/export/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441> .
