bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q3 (String).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
{
  "head": {
    "vars": [
      "product",
      "label"
    ]
  },
  "results": {
    "bindings": [
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product568"
        },
        "label": {
          "type": "literal",
          "value": "primas"
        }
      }
    ]
  }
}
