bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q4 (PlainTerm).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
{
  "head": {
    "vars": [
      "product",
      "label",
      "propertyTextual"
    ]
  },
  "results": {
    "bindings": [
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product318"
        },
        "label": {
          "type": "literal",
          "value": "repopulates"
        },
        "propertyTextual": {
          "type": "literal",
          "value": "viewier parallels rectorial desalts foreleg fathomable madcaps rhombs joyfulness birthplaces hajjis undaunted patrimonially pacifisms"
        }
      }
    ]
  }
}
