bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q7 (ObjectId).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
{
  "head": {
    "vars": [
      "productLabel",
      "offer",
      "price",
      "vendor",
      "vendorTitle",
      "review",
      "revTitle",
      "reviewer",
      "revName",
      "rating1",
      "rating2"
    ]
  },
  "results": {
    "bindings": [
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review628"
        },
        "revTitle": {
          "type": "literal",
          "value": "encamps freestanding alcaldes rebids admonisher overproducing unhorses gastroscopic scrags caboodle sexiest etherized"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer32"
        },
        "revName": {
          "type": "literal",
          "value": "Anasooya"
        },
        "rating1": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "rating2": {
          "type": "literal",
          "value": "3",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7349"
        },
        "revTitle": {
          "type": "literal",
          "value": "sons illustrates prognose huskiest bouse"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer361"
        },
        "revName": {
          "type": "literal",
          "value": "Guy-Yasuyuki"
        },
        "rating1": {
          "type": "literal",
          "value": "5",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "rating2": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7761"
        },
        "revTitle": {
          "type": "literal",
          "value": "intendeds doorstops chryslers glamorously pyrometers corruptibleness mounded"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer383"
        },
        "revName": {
          "type": "literal",
          "value": "Kaori-Gratia"
        },
        "rating1": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "rating2": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productLabel": {
          "type": "literal",
          "value": "seems retentiveness repressiveness"
        },
        "review": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Review7913"
        },
        "revTitle": {
          "type": "literal",
          "value": "discrowned rankish grandams hetaerae gassiness slagging lakiest deselect basswoods investiture neglecting"
        },
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer391"
        },
        "revName": {
          "type": "literal",
          "value": "Nali-Amphiaraus"
        },
        "rating1": {
          "type": "literal",
          "value": "5",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "rating2": {
          "type": "literal",
          "value": "1",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      }
    ]
  }
}
