bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q9 (String).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer207> a <http://xmlns.com/foaf/0.1/Person> .
